// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing _classicalRegister register with label offset 1`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with label offset 2`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with label offset 3`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with large width 1`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"500\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"500\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with large width 2`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"500\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"500\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with large width 3`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"500\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"500\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with normal width 1`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with normal width 2`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with normal width 3`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"100\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"100\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with small width 1`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"5\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"5\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with small width 2`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"5\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"5\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _classicalRegister register with small width 3`] = `
"<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"11\\" y1=\\"10\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"9\\" y1=\\"10\\" y2=\\"21\\"></line>
<line class=\\"register-classical\\" x1=\\"11\\" x2=\\"5\\" y1=\\"19\\" y2=\\"19\\"></line>
<line class=\\"register-classical\\" x1=\\"9\\" x2=\\"5\\" y1=\\"21\\" y2=\\"21\\"></line>"
`;

exports[`Testing _qubitRegister register with label offset 1`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"20\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing _qubitRegister register with label offset 2`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"15\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>"
`;

exports[`Testing _qubitRegister register with label offset 3`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"-30\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>"
`;

exports[`Testing _qubitRegister register with large width 1`] = `
"<line x1=\\"40\\" x2=\\"500\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing _qubitRegister register with large width 2`] = `
"<line x1=\\"40\\" x2=\\"500\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>"
`;

exports[`Testing _qubitRegister register with large width 3`] = `
"<line x1=\\"40\\" x2=\\"500\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>"
`;

exports[`Testing _qubitRegister register with normal width 1`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing _qubitRegister register with normal width 2`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>"
`;

exports[`Testing _qubitRegister register with normal width 3`] = `
"<line x1=\\"40\\" x2=\\"100\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>"
`;

exports[`Testing _qubitRegister register with small width 1`] = `
"<line x1=\\"40\\" x2=\\"5\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing _qubitRegister register with small width 2`] = `
"<line x1=\\"40\\" x2=\\"5\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>"
`;

exports[`Testing _qubitRegister register with small width 3`] = `
"<line x1=\\"40\\" x2=\\"5\\" y1=\\"20\\" y2=\\"20\\"></line>
<text x=\\"40\\" y=\\"4\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>"
`;

exports[`Testing formatRegisters 1 quantum register 1`] = `
"<line x1=\\"40\\" x2=\\"180\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing formatRegisters 1 quantum register 2`] = `
"<line x1=\\"40\\" x2=\\"85\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing formatRegisters 1 quantum register 3`] = `
"<line x1=\\"40\\" x2=\\"580\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>"
`;

exports[`Testing formatRegisters Multiple quantum registers 1`] = `
"<line x1=\\"40\\" x2=\\"180\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;

exports[`Testing formatRegisters Multiple quantum registers 2`] = `
"<line x1=\\"40\\" x2=\\"85\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;

exports[`Testing formatRegisters Multiple quantum registers 3`] = `
"<line x1=\\"40\\" x2=\\"580\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;

exports[`Testing formatRegisters Quantum and classical registers 1`] = `
"<line x1=\\"40\\" x2=\\"180\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"120\\" y2=\\"120\\"></line>
<text x=\\"40\\" y=\\"104\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"180\\" y2=\\"180\\"></line>
<text x=\\"40\\" y=\\"164\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"180\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"180\\" y1=\\"81\\" y2=\\"81\\"></line>"
`;

exports[`Testing formatRegisters Quantum and classical registers 2`] = `
"<line x1=\\"40\\" x2=\\"85\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"120\\" y2=\\"120\\"></line>
<text x=\\"40\\" y=\\"104\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"180\\" y2=\\"180\\"></line>
<text x=\\"40\\" y=\\"164\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"85\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"85\\" y1=\\"81\\" y2=\\"81\\"></line>"
`;

exports[`Testing formatRegisters Quantum and classical registers 3`] = `
"<line x1=\\"40\\" x2=\\"580\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"120\\" y2=\\"120\\"></line>
<text x=\\"40\\" y=\\"104\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"180\\" y2=\\"180\\"></line>
<text x=\\"40\\" y=\\"164\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"580\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"580\\" y1=\\"81\\" y2=\\"81\\"></line>"
`;

exports[`Testing formatRegisters Quantum and classical registers 4`] = `
"<line x1=\\"40\\" x2=\\"180\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"180\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"180\\" y1=\\"81\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"180\\" y1=\\"119\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"180\\" y1=\\"121\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"160\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"160\\" y2=\\"201\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"180\\" y1=\\"199\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"180\\" y1=\\"201\\" y2=\\"201\\"></line>"
`;

exports[`Testing formatRegisters Quantum and classical registers 5`] = `
"<line x1=\\"40\\" x2=\\"85\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"85\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"85\\" y1=\\"81\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"85\\" y1=\\"119\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"85\\" y1=\\"121\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"160\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"160\\" y2=\\"201\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"85\\" y1=\\"199\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"85\\" y1=\\"201\\" y2=\\"201\\"></line>"
`;

exports[`Testing formatRegisters Quantum and classical registers 6`] = `
"<line x1=\\"40\\" x2=\\"580\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"100\\" y2=\\"100\\"></line>
<text x=\\"40\\" y=\\"84\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q1</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"580\\" y1=\\"79\\" y2=\\"79\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"580\\" y1=\\"81\\" y2=\\"81\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"40\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"40\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"580\\" y1=\\"119\\" y2=\\"119\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"580\\" y1=\\"121\\" y2=\\"121\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"81\\" y1=\\"160\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"79\\" y1=\\"160\\" y2=\\"201\\"></line>
<line class=\\"register-classical\\" x1=\\"81\\" x2=\\"580\\" y1=\\"199\\" y2=\\"199\\"></line>
<line class=\\"register-classical\\" x1=\\"79\\" x2=\\"580\\" y1=\\"201\\" y2=\\"201\\"></line>"
`;

exports[`Testing formatRegisters Skipped quantum registers 1`] = `
"<line x1=\\"40\\" x2=\\"180\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"180\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;

exports[`Testing formatRegisters Skipped quantum registers 2`] = `
"<line x1=\\"40\\" x2=\\"85\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"85\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;

exports[`Testing formatRegisters Skipped quantum registers 3`] = `
"<line x1=\\"40\\" x2=\\"580\\" y1=\\"40\\" y2=\\"40\\"></line>
<text x=\\"40\\" y=\\"24\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q0</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"160\\" y2=\\"160\\"></line>
<text x=\\"40\\" y=\\"144\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q2</text>
<line x1=\\"40\\" x2=\\"580\\" y1=\\"220\\" y2=\\"220\\"></line>
<text x=\\"40\\" y=\\"204\\" dominant-baseline=\\"hanging\\" text-anchor=\\"start\\" font-size=\\"75%\\">q3</text>"
`;
